--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -1,5 +1,25 @@
-.logo {
-    margin-top: revert !important;
+@media all and (max-width: 980px) {
+
+  .horizontalLayoutSearchDisks {
+    display: block;
+  }
+
+  .horizontalLayoutHeader {
+    display: flex;
+  }
+
+  .logo {
+    display: none;
+  }
+
+  .contactsImages {
+    width: 80%;
+  }
+
+}
+
+.dashboardLogo {
+  width: 110px;
 }
 
 .header-layout {
@@ -32,4 +52,20 @@
     border:none;
     margin:0;
     padding:0;z-index:999999;
+}
+
+.login-rich-content {
+  background-image: url("/images/earth.jpg");
+  background-position: center;
+  background-size: cover;
+  display: flex;
+  height: 100%;
+}
+.login-rich-content vaadin-login-form {
+  align-items: center;
+  display: flex;
+  max-width: 300px;
+}
+.login-rich-content vaadin-login-form-wrapper {
+  background-image: none;
 }
